--- a/assets/style.css
+++ b/assets/style.css
@@ -17,31 +17,25 @@ body {
   padding-block: 30px;
   align-items: center;
 }
-
 .top-header .name {
   font-size: 26px;
 }
-
 .nav ul {
   display: flex;
   list-style-type: none;
   font-size: 14px;
   margin-bottom: 0;
 }
-
 .nav li {
   padding-inline: 10px;
 }
-
 .nav a {
   text-decoration: none;
   color: #000;
 }
-
 .social-link img {
   width: 20px;
 }
-
 #about {
   display: flex;
   background-color: #f6d2b8;
@@ -49,7 +43,6 @@ body {
   padding-block: 100px;
   position: relative;
 }
-
 .picture.left::before {
   content: " ";
   background-color: #e5975f;
@@ -60,13 +53,11 @@ body {
   left: 0;
   z-index: -1;
 }
-
 .picture {
   flex: 1;
   margin: 0 20px;
   z-index: 0;
 }
-
 .picture img {
   width: 100%;
 }
@@ -85,13 +76,10 @@ body {
   width: 60%;
   font-size: 1rem;
 }
-
-}
 #about-me p {
   width: 80%;
   font-size: 14px;
 }
-
 #gallery {
   /*	min-height: 100vh; */
 }
@@ -132,13 +120,12 @@ body {
 .mg-next {
   width: 30px;
   height: 30px;
-  border-radius: 00%;
+  border-radius: 0%;
   justify-content: center;
   align-items: center;
   display: flex;
   font-size: 24px;
 }
-
 .quote {
   font-family: "Spectral";
   font-style: italic;
@@ -157,7 +144,6 @@ body {
   font-weight: 800;
   font-size: 22px;
 }
-
 #services {
   margin: auto;
   background-color: #a8d5d8;
@@ -173,13 +159,11 @@ body {
   left: 0;
   z-index: 0;
 }
-
 #services .container {
   justify-content: space-between;
   display: flex;
   padding: 2em 0;
 }
-
 .service {
   background-color: white;
   max-width: 390px;
@@ -191,7 +175,6 @@ body {
   justify-content: space-between;
   z-index: 1;
 }
-
 #contact {
   margin: auto;
   background-color: #d8d3a8;
@@ -199,7 +182,6 @@ body {
   padding-inline: 100px;
   padding-block: 100px;
 }
-
 #contact .container {
   display: flex;
 }
@@ -222,7 +204,6 @@ form {
   width: 70%;
   align-items: flex-start;
 }
-
 form input {
   width: 100%;
   background-color: transparent;
@@ -230,7 +211,6 @@ form input {
   height: 2.5em;
   margin-bottom: 20px;
 }
-
 form textarea {
   width: 100%;
   background-color: transparent;
@@ -243,6 +223,24 @@ form textarea {
 input[type="submit"] {
   background-color: #beb45a;
   padding: 0.5em 1em;
+}
+footer {
+  background-color: white;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 100px;
+  padding-block: 30px;
+  align-items: center;
+}
+footer ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  font-size: 14px;
+  margin-bottom: 0;
 }
 
 @media all and (max-width: 1180px) {
