--- a/assets/style.css
+++ b/assets/style.css
@@ -76,6 +76,9 @@ body {
   width: 60%;
   font-size: 1rem;
 }
+.visually-hidden {
+  background-color: blue;
+}
 #about-me p {
   width: 80%;
   font-size: 14px;
@@ -92,7 +95,7 @@ body {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: black;
   background-color: #beb45a;
   border-radius: 0;
 }
